# mmoldb

./: .gitignore  .gitmodules  Cargo.toml  Rocket.toml  changelog.md  delete_derived.sql  delete_derived_after.sql  diesel.toml  readme.md  todo.txt
.cargo/: config.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/pg_conf/: postgresql.conf
chron/: Cargo.toml
chron/src/: lib.rs
docker-prod/: .env  Dockerfile  Dockerfile-app  Dockerfile-ingest  docker-compose.yml
docker-prod/pg_conf/: postgresql.conf
migrations/2025-04-24-053717_create-ingests-table/: up.sql
migrations/2025-04-26-183010_create_event_table/: down.sql  up.sql
migrations/2025-07-01-021729_create_players_table/: down.sql  up.sql
migrations/2025-07-15-081626_create-chron/: down.sql  up.sql
migrations/2025-07-17-062428_adjust-ingest-timings/: down.sql  up.sql
migrations/2025-07-17-064553_update-games-for-new-ingest-format/: down.sql  up.sql
migrations/2025-07-17-161600_add-stadium-and-cheers/: down.sql  up.sql
migrations/2025-07-20-224546_era-tracking-and-s3-updates/: down.sql  up.sql
migrations/2025-07-21-053115_force-reingest/: up.sql
migrations/2025-07-22-032815_create-players-table/: down.sql  up.sql
migrations/2025-07-28-053605_fixes-to-players-table/: down.sql  up.sql
migrations/2025-08-01-035307_player-feed-table/: down.sql  up.sql
migrations/2025-08-02-205504_check-dates-constraint/: down.sql  up.sql
migrations/2025-08-04-061328_inferred-recompositions/: down.sql  up.sql
migrations/2025-08-07-015728_season-4-tables/: down.sql  up.sql
migrations/2025-08-07-192026_force-reingest/: down.sql  up.sql
migrations/2025-08-09-005424_do-mod-and-equipment-close-outs-in-db/: down.sql  up.sql
migrations/2025-08-09-202658_player-tweaks/: down.sql  up.sql
migrations/2025-08-10-190254_fix-functions-on-renamed-tables/: down.sql  up.sql
migrations/2025-08-10-192811_fix-functions-on-renamed-tables-for-real-this-time/: down.sql  up.sql
migrations/2025-08-10-194344_fix-functions-on-renamed-tables-for-real-this-time-v2/: down.sql  up.sql
migrations/2025-08-10-200229_redo-player-reports/: down.sql  up.sql
migrations/2025-08-11-055130_coins-and-photo-contest-winners-on-games/: down.sql  up.sql
migrations/2025-08-14-032107_add-team-ingest/: down.sql  up.sql
migrations/2025-08-18-100710_team-players/: down.sql  up.sql
migrations/2025-08-19-041010_door-prizes-table/: down.sql  up.sql
migrations/2025-08-20-063529_team-fixes/: down.sql  up.sql
migrations/2025-08-22-021105_tablefunc/: down.sql
migrations/2025-08-22-042600_clean-up-team-fields/: down.sql  up.sql
migrations/2025-08-23-024546_non-baseball-game-events/: down.sql  up.sql
migrations/2025-09-01-033129_add-fair-ball-fielder-name/: down.sql  up.sql
migrations/2025-09-05-070420_team-feed/: down.sql  up.sql
migrations/2025-09-06-050805_first-views/: down.sql  up.sql
migrations/2025-09-07-185241_record-ingest-abort-error/: down.sql  up.sql
migrations/2025-09-11-041115_index-to-speed-up-ingest/: down.sql  up.sql
migrations/2025-09-12-012308_fix-player-doubly-indirect-tables/: down.sql  up.sql
migrations/2025-09-15-015624_some-cleanup/: down.sql  up.sql
migrations/2025-09-24-055825_players-extended-view/: down.sql  up.sql
migrations/2025-10-03-061419_pre-s6-fixes/: down.sql  up.sql
migrations/2025-10-04-053057_fix-foreign-keys/: down.sql  up.sql
migrations/2025-10-06-010417_fix-players-extended/: down.sql  up.sql
migrations/2025-10-06-021032_versions-with-issues-matview/: down.sql  up.sql
migrations/2025-10-13-022921_season-6-additions/: down.sql  up.sql
migrations/2025-10-15-014024_season-6-additions-2/: down.sql  up.sql
migrations/2025-10-15-072005_fix-reports-insert/: down.sql  up.sql
migrations/2025-10-17-005740_fix-fix-reports-insert/: up.sql
migrations/2025-11-07-082813_s7-updates/: down.sql  up.sql
mmoldb-app/: Cargo.toml  Rocket.toml
mmoldb-app/schema_docs/: data.toml  info.toml  taxa.toml
mmoldb-app/src/: chron.rs  main.rs  models.rs  records_cache.rs
mmoldb-app/src/api/: error.rs  mod.rs  player.rs
mmoldb-app/src/db/: mod.rs  taxa.rs
mmoldb-app/src/ingest/: check_round_trip.rs  mod.rs  sim.rs  worker.rs
mmoldb-app/src/web/: docs_pages.rs  error.rs  mod.rs  pages.rs  player_pages.rs  plots.rs  utility_contexts.rs
mmoldb-app/static/: docs.css  game.css  health.css  ingest.css  records.css  status.css  style.css
mmoldb-app/templates/: docs.html.tera  docs_schema.html.tera  docs_table.html.tera  game.html.tera  health.html.tera  index.html.tera  ingest-timings.html.tera  ingest.html.tera  json_renderer.html.tera  macros.html.tera  player.html.tera  records.html.tera  status.html.tera
mmoldb-db/: Cargo.toml
mmoldb-db/src/: async_db.rs  data_schema.rs  db.rs  event_detail.rs  lib.rs  migrations.rs  models.rs  parsing_extensions.rs  pool.rs  url.rs
mmoldb-db/src/db/: balk_reasons.rs  cheers.rs  entities.rs  mod.rs  raw.rs  to_db_format.rs  versions.rs  weather.rs
mmoldb-db/src/schema/: data_schema.rs  info_schema.rs  mod.rs  taxa_schema.rs
mmoldb-db/src/taxa/: mod.rs  taxa_macro.rs
mmoldb-ingest/: Cargo.toml
mmoldb-ingest/src/: config.rs  ingest.rs  ingest_feed.rs  ingest_feed_shared.rs  ingest_games.rs  ingest_player_feed.rs  ingest_players.rs  ingest_team_feed.rs  ingest_teams.rs  logging_setup.rs  main.rs  modifier_effects_value.rs  partitioner.rs  signal.rs
mmoldb-ingest/src/ingest/: check_round_trip.rs  config.rs  fetch.rs  mod.rs  processing.rs  sim.rs  worker.rs
mmoldb-ingest/src/ingest_games/: check_round_trip.rs  config.rs  mod.rs  sim.rs  worker.rs
mmoldb-ingest/src/ingest_player_feed/: ingest_feed_shared.rs
mmoldb-ingest/src/ingest_players/: logic.rs  mod.rs
one-au/: Cargo.toml
one-au-derive/: Cargo.toml
one-au/src/: lib.rs
schema_docs/: data.toml  info.toml  taxa.toml
src/: chron.rs  data_schema.rs  db2.rs  info_schema.rs  ingest_main.rs  main.rs  meta_schema.rs  models.rs  shared.rs  taxa_schema.rs
templates/: docs.html.tera  docs_schema.html.tera  index.html.tera  status.html.tera
(+86 files in other folders)
