[package]
name = "chron"
version = "0.1.0"
edition = "2024"

[lib]
name = "chron"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
thiserror = "2.0.12"
miette = "7.6.0"
reqwest = { version = "0.13.1", features = ["query", "json", "gzip", "brotli", "zstd"] }
tokio = "1.46.1"