[package]
name = "mmoldb-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mmoldb-app"
path = "src/main.rs"

[dependencies]
mmoldb-db = { path = "../mmoldb-db" }
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_cors = "0.6.0"
diesel = { version = "~2", features = ["chrono", "postgres", "64-column-tables", "serde_json", "numeric"] }
diesel_migrations = "~2"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
chrono-humanize = "0.2.3"
itertools = "0.14.0"
num-format = "0.4.4"
miette = { version = "7.6.0", features = ["fancy"] }
tokio = "1.46.1"
toml = "0.9.0"
include_dir = "0.7.4"
markdown = "1.0.0"
openport = { version = "0.1.1", features = ["rand"] }
hashbrown = { version = "0.15.4", features = ["serde"] }
bigdecimal = "0.4.8"
