[package]
name = "mmoldb-db"
version = "0.1.0"
edition = "2024"

[dependencies]
chron = { path = "../chron" }
diesel = { version = "~2", features = ["chrono", "postgres", "64-column-tables", "serde_json"] }
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
chrono = "0.4.41"
itertools = "0.14.0"
log = "0.4.27"
serde_json = "1.0.140"
