[package]
name = "mmoldb-db"
version = "0.1.0"
edition = "2024"

[lib]
name = "mmoldb_db"
path = "src/lib.rs"

[dependencies]
chron = { path = "../chron" }
diesel = { version = "~2", features = ["chrono", "postgres", "64-column-tables", "serde_json", "numeric", "r2d2"] }
diesel_migrations = "~2"
diesel-async = { version = "0.6.1", features = ["postgres"] }
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
chrono = "0.4.41"
itertools = "0.14.0"
log = "0.4.27"
serde_json = "1.0.140"
mmolb_parsing = { git = "https://github.com/beiju/mmolb_parsing.git", branch = "hotfix/s8" }
miette = "7.6.0"
hashbrown = "0.16.0"
thiserror = "2.0.12"
paste = "1.0.15"
enum-map = "2.7.3"
strum = "0.27.1"
futures = "0.3.31"
