[package]
name = "mmoldb-ingest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mmoldb-ingest"
path = "src/main.rs"

[dependencies]
chron = { path = "../chron" }
mmoldb-db = { path = "../mmoldb-db" }
mmolb_parsing = { git = "https://github.com/unnamed-girl/mmolb_parsing.git" }
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
tokio = { version = "1.46.1", features = ["full", "tracing"] }
env_logger = "0.11.8"
serde_json = "1.0.140"
tokio-util = "0.7.15"
thiserror = "2.0.12"
log = "0.4.27"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-humanize = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_default = "0.2.0"
itertools = "0.14.0"
strum = "0.27.1"
console-subscriber = "0.4.1"
hashbrown = "0.16.0"
rayon = "1.10.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
num = "0.4.3"
ascii = "1.1.0"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
serde_path_to_error = "0.1.20"
